# libtradier

./: .gitignore  .valgrind-suppressions  CMakeLists.txt  DEBUGGING_GUIDE.md  DEVELOPMENT_PROGRESS.md  LICENSE.md  README.md  debug_simd  run_tests.sh  to-do.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  cmake-single-platform.yml  comprehensive-tests.yml  nightly.yml
cmake/: SIMD.cmake  libtradier.pc.in  libtradierConfig.cmake.in  simd_config.h.in  tradier-config.cmake.in
examples/: CMakeLists.txt  README.md  auth_example.cpp  basic_example.cpp  market_feature_test.cpp  streaming_debug_test.cpp  streaming_example.cpp  streaming_feature_test.cpp  trading_example.cpp  trading_example_plus_plus.cpp  watchlist_feature_test.cpp
examples/basic/: account_info.cpp  account_info_fixed.cpp  market_data.cpp  quote_streamer.cpp  simple_trading.cpp  simple_trading_fixed.cpp
include/tradier/: account.hpp  auth.hpp  client.hpp  data.hpp  market.hpp  streaming.hpp  trading.hpp  watchlist.hpp
include/tradier/common/: api_result.hpp  async.hpp  config.hpp  debug.hpp  errors.hpp  http_client.hpp  json_utils.hpp  simple_async.hpp  types.hpp  utils.hpp  validation.hpp  version.hpp  websocket_client.hpp
include/tradier/json/: account.hpp  market.hpp  streaming.hpp  trading.hpp
include/tradier/simd/: simd_config.hpp  simd_traits.hpp  streaming_simd.hpp  vectorized_ops.hpp
references/: endpointResponses.md  exchangeCodes.md
scripts/: benchmark_runner.sh  quality_checks.sh
src/: account.cpp  auth.cpp  client.cpp  market.cpp  streaming.cpp  trading.cpp  watchlist.cpp
src/common/: config.cpp  debug.cpp  http_client.cpp  json_utils.cpp  json_utils_base.cpp  utils.cpp  websocket_client.cpp
src/json/: account.cpp  market.cpp  market.hpp  streaming.cpp  trading.cpp
src/simd/: cpu_features.cpp  greeks_simd.cpp  historical_simd.cpp  json_simd.cpp  streaming_simd.cpp
testing/: CMakeLists.txt  README.md  test_auth.cpp  test_config.cpp  test_config.hpp  test_framework.hpp  test_json_utils.cpp  test_main.cpp  test_market.cpp  test_mocks.cpp  test_streaming.hpp  test_trading.cpp  test_utils.cpp  test_watchlist.cpp
tests/: CMakeLists.txt
tests/fixtures/: test_data.cpp  test_data.h
tests/integration/: test_api_integration.cpp
tests/mocks/: mock_http_client.cpp  mock_http_client.h
tests/unit/: test_account.cpp  test_auth.cpp  test_client.cpp  test_market.cpp  test_simple.cpp  test_streaming.cpp  test_trading.cpp  test_watchlist.cpp
